Fix app folder unreadable text

--- a/src/gnome-shell/3.22/_common.scss
+++ b/src/gnome-shell/3.22/_common.scss
@@ -1415,18 +1415,17 @@ StScrollBar {
     }
     &:active .overview-icon,
     &:checked .overview-icon {
-      background-color: transparentize(darken($osd_bg_color,10%),.1);
-      box-shadow: inset 0 1px 2px $osd_borders_color;
+      background-color: $selected_bg_color;
+      box-shadow: none;
     }
     &:hover .overview-icon,
     &:focus .overview-icon,
     &:selected .overview-icon {
-      background-color: transparentize($osd_fg_color,.9);
+      background-color: rgba(black, 0.20);
       transition-duration: 0ms;
       border-image: none;
       background-image: none;
     }
-
   }
 
   .app-well-app-running-dot { //running apps indicator
@@ -1468,6 +1467,10 @@ StScrollBar {
 		background-color: $bg_color;
 		border: 1px solid $borders_color;
 		box-shadow: 0 3px 9px 1px transparentize(black, 0.5);
+
+    & .overview-icon {
+      color: $fg_color;
+    }
 	}
 	
   .app-folder-icon {
