--- a/src/gnome-shell/3.22/gnome-shell-dark.css
+++ b/src/gnome-shell/3.22/gnome-shell-dark.css
@@ -1744,8 +1744,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .show-apps:checked .overview-icon,
 .grid-search-result:active .overview-icon,
 .grid-search-result:checked .overview-icon {
-  background-color: rgba(23, 24, 28, 0.9);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.7);
+  background-color: #1c71d8;
+  box-shadow: none;
 }
 
 .app-well-app:hover .overview-icon,
@@ -1760,7 +1760,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .grid-search-result:hover .overview-icon,
 .grid-search-result:focus .overview-icon,
 .grid-search-result:selected .overview-icon {
-  background-color: rgba(238, 238, 236, 0.1);
+  background-color: rgba(0, 0, 0, 0.2);
   transition-duration: 0ms;
   border-image: none;
   background-image: none;
@@ -1809,6 +1809,10 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   background-color: #2E3038;
   border: 1px solid #17181c;
   box-shadow: 0 3px 9px 1px rgba(0, 0, 0, 0.5);
+}
+
+.app-folder-popup-bin .overview-icon {
+  color: #eeeeee;
 }
 
 .app-folder-icon {
